@@ -1,29 +1,11 @@
 syntax: glob
 
-# python derivatives 
-*.pyc
-*.pyo
-*$py.class
-# backup files
-*~
-*.bak
-*.o
-*.orig
-.ruamel
-# pip / setup related
-dist
-build
-*.egg-info
-# tox related
-.tox
-.cache
+MAKEFILE
 
-_yaml.so
+# _yaml.so
 README.pdf
 venv
-convert
-cmd
 TODO.rst
 _doc/_build
-.dcw_alt.yml
+_bg_info
 try_*
