@@ -1,10 +1,0 @@
-
-UTILNAME:=yaml
-PKGNAME:=ruamel.yaml
-INSTPKGNAME:=--pkg ruamel.yaml
-VERSION:=0.15.9.dev
-VERSIOND:=0.15.9.dev0
-
-include ~/.config/develop/Makefile.inc
-
-clean: clean_common
