@@ -153,3 +153,99 @@ class TestNoIndent:
         """.format(s))
         print(d)
         assert d == s + '\n'
+
+
+class Test_RoundTripLiteral:
+    def test_rt_top_literal_scalar_no_indent(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        s = 'testing123'
+        ys = """
+        --- |
+        {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_literal_scalar_indent(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        yaml.indent = 4
+        s = 'testing123'
+        ys = """
+        --- |
+            {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_plain_scalar_no_indent(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        yaml.indent = 0
+        s = 'testing123'
+        ys = """
+        ---
+        {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_plain_scalar_expl_indent(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        yaml.indent = 4
+        s = 'testing123'
+        ys = """
+        ---
+            {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_sq_scalar_expl_indent(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        yaml.indent = 4
+        s = "'testing: 123'"
+        ys = """
+        ---
+            {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_dq_scalar_expl_indent(self):
+        # if yaml.indent is the default (None)
+        # then write after the directive indicator
+        yaml = YAML()
+        yaml.explicit_start = True
+        yaml.indent = 0
+        s = '"\'testing123"'
+        ys = """
+        ---
+        {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_top_literal_scalar_no_indent_no_eol(self):
+        yaml = YAML()
+        yaml.explicit_start = True
+        s = 'testing123'
+        ys = """
+        --- |-
+        {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
+
+    def test_rt_non_top_literal_scalar(self):
+        yaml = YAML()
+        s = 'testing123'
+        ys = """
+        - |
+          {}
+        """.format(s)
+        d = yaml.load(ys)
+        yaml.dump(d, compare=ys)
