@@ -11,7 +11,7 @@ deps =
 
 [testenv:pep8]
 commands =
-    flake8 {posargs}
+    flake8  --exclude jabsy,jinja2,base,cmd,convert{posargs}
 
 [flake8]
 show-source = True
